Revert "Merge branch 'frontend/community' into develop"
This reverts commit 408ebc1963885e9bf7599d3724117768996635b9, reversing
changes made to 5d620322b74258ce3d7ba1f912c321d3a52ea09a.